--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -39,7 +39,7 @@ body {
 	word-wrap: break-word;
 	overflow-wrap: break-word;
 	color: rgb(var(--gray-dark));
-	font-size: 20px;
+	/*font-size: 20px;*/
 	line-height: 1.7;
 }
 main {
@@ -59,19 +59,19 @@ h6 {
 	line-height: 1.2;
 }
 h1 {
-	font-size: 3.052em;
+	font-size: 1.2em;
 }
 h2 {
-	font-size: 2.441em;
+	font-size: 1.15em;
 }
 h3 {
-	font-size: 1.953em;
+	font-size: 1.1em;
 }
 h4 {
-	font-size: 1.563em;
+	font-size: 1.05em;
 }
 h5 {
-	font-size: 1.25em;
+	font-size: 1.0em;
 }
 strong,
 b {
@@ -91,10 +91,10 @@ p {
 }
 textarea {
 	width: 100%;
-	font-size: 16px;
+	/*font-size: 16px;*/
 }
 input {
-	font-size: 16px;
+	/*font-size: 16px;*/
 }
 table {
 	width: 100%;
@@ -120,7 +120,7 @@ blockquote {
 	border-left: 4px solid var(--accent);
 	padding: 0 0 0 20px;
 	margin: 0px;
-	font-size: 1.333em;
+	/*font-size: 1.333em;*/
 }
 hr {
 	border: none;
@@ -128,7 +128,7 @@ hr {
 }
 @media (max-width: 720px) {
 	body {
-		font-size: 18px;
+		/*font-size: 18px;*/
 	}
 	main {
 		padding: 1em;
