--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,6 +49,18 @@ import { SITE_TITLE } from '../consts';
 		display: flex;
 	}
 	@media (max-width: 720px) {
+		nav {
+			flex-direction: column;
+			align-items: flex-start;
+		}
+
+		header h2 {
+			margin-top: 1.15em;
+		}
+		.internal-links {
+			margin-top: 0.5em;
+		}
+
 		.social-links {
 			display: none;
 		}
