Update privacy policy title

--- a/src/pages/privacy-policy.astro
+++ b/src/pages/privacy-policy.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/BlogPost.astro';
 ---
 
 <Layout
-	title="Privacy Policy"
+	title="個人情報保護方針（プライバシーポリシー）"
 	description="個人情報保護方針（プライバシーポリシー）"
 	pubDate={new Date('2017-03-20')}
 >
