--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -14,6 +14,16 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const { title, description, image } = Astro.props;
 ---
 
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" src="https://www.googletagmanager.com/gtag/js?id=G-TTM7G82PNJ"></script>
+<script type="text/partytown">
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-TTM7G82PNJ');
+</script>
+
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
