Update header links with trailing slashes

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,8 +8,8 @@ import { SITE_TITLE } from '../consts';
 		<h2><a href="/">{SITE_TITLE}</a></h2>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/privacy-policy">Privacy Policy</HeaderLink>
+			<HeaderLink href="/blog/">Blog</HeaderLink>
+			<HeaderLink href="/privacy-policy/">Privacy Policy</HeaderLink>
 		</div>
 	</nav>
 </header>
