--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -56,6 +56,8 @@ const { title, description, pubDate, updatedDate, heroImage, tags } = Astro.prop
 			ul#tags-list {
 				list-style-type: none;
 				display: flex;
+				flex-wrap: wrap;
+				gap: 0.2em;
 				justify-content: center;
 				margin: 1em 0;
 				padding: 0;
