--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -3,6 +3,8 @@
 // all pages through the use of the <BaseHead /> component.
 import '../styles/global.css';
 
+import { SITE_TITLE } from '../consts';
+
 interface Props {
 	title: string;
 	description: string;
@@ -11,7 +13,8 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image } = Astro.props;
+const { description, image } = Astro.props;
+const title = Astro.props.title === SITE_TITLE ? SITE_TITLE : `${Astro.props.title} | ${SITE_TITLE}`;
 ---
 
 <!-- Google tag (gtag.js) -->
