--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,8 +73,15 @@ a:hover {
 p {
 	margin-bottom: 1em;
 }
-.prose p {
-	margin-bottom: 2em;
+.prose li p {
+	margin-top: 0;
+	margin-bottom: 0;
+}
+.prose h2, .prose h3, .prose h4, .prose h5, .prose h6 {
+	margin-top: 2em;
+}
+.prose h2 + h3, .prose h3 + h4, .prose h4 + h5, .prose h5 + h6 {
+	margin-top: 1em;
 }
 textarea {
 	width: 100%;
